<resources>
    <string name="app_name">CabbageBeyond</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">20 sided dice</string>

    <!-- Drawer Menu -->
    <string name="menu_collection">Data</string>
    <string name="menu_worlds">Worlds</string>
    <string name="menu_characters">Characters</string>
    <string name="menu_talents">Talents</string>
    <string name="menu_handicaps">Handicaps</string>
    <string name="menu_abilities">Abilities</string>
    <string name="menu_forces">Forces</string>
    <string name="menu_equipments">Equipments</string>
    <string name="menu_races">Races</string>
    <string name="menu_content">Content</string>
    <string name="menu_stories">Stories</string>
    <string name="menu_sessions">Sessions</string>
    <string name="menu_admin_panel">Admin</string>
    <string name="menu_account">Account</string>

    <!-- Options Menu -->
    <string name="menu_search">Search</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_ocr">OCR</string>
    <string name="menu_synchronize">Synchronize</string>

    <!-- Dialog -->
    <string name="dialog_title_edit_user">Edit</string>
    <string name="dialog_button_save">Save</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_delete">Remove</string>
    <string name="dialog_title_attention">Attention</string>
    <string name="dialog_message_delete_user">Do you really want to delete %s?\nNote: Firebase account can be deleted only from the console.</string>

    <!-- Edit Account -->
    <string name="edit_description">Edit %s</string>
    <string name="nickname_title">Nickname</string>
    <string name="email_title">Email</string>
    <string name="account_active_world_title">Active world</string>
    <string name="account_own_characters">Own characters</string>

    <!-- Character Details -->
    <string name="character_race">Race</string>
    <string name="character_type">Type</string>
    <string name="character_world">World</string>
    <string name="character_description">Description</string>
    <string name="select_attribute">Select an attribute</string>
    <string name="select_world">Select a world</string>

    <string name="character_type_player">Player</string>
    <string name="character_type_npc">NPC</string>
    <string name="character_type_monster">Monster</string>

    <!-- Ability attributes -->
    <string name="attribute_strength">Strength</string>
    <string name="attribute_intellect">Intellect</string>
    <string name="attribute_constitution">Constitution</string>
    <string name="attribute_dexterity">Dexterity</string>
    <string name="attribute_willpower">Willpower</string>

    <!-- Equipment types-->
    <string name="equipment_type_weapon">Weapon</string>
    <string name="equipment_type_armor">Armor</string>
    <string name="equipment_type_others">Others</string>

    <!-- Ranks -->
    <string name="rank_rookie">Rookie</string>
    <string name="rank_advanced">Advanced</string>
    <string name="rank_veteran">Veteran</string>
    <string name="rank_hero">Hero</string>
    <string name="rank_legend">Legend</string>

    <!-- Handicaps -->
    <string name="handicap_type_slight">Slight</string>
    <string name="handicap_type_slight_or_heavy">Slight or heavy</string>
    <string name="handicap_type_heavy">Heavy</string>

    <!-- Types of talents -->
    <string name="talent_type_background">Background</string>
    <string name="talent_type_leader">Leader</string>
    <string name="talent_type_expert">Expert</string>
    <string name="talent_type_fight">Fight</string>
    <string name="talent_type_force">Force</string>
    <string name="talent_type_race">Race</string>
    <string name="talent_type_social">Social</string>
    <string name="talent_type_supernatural">Supernatural</string>
    <string name="talent_type_wildcard">Wildcard</string>
    <string name="talent_type_legendary">Legendary</string>
    <string name="talent_type_dragon">Dragon</string>
    <string name="talent_type_athletic">Athletic</string>
    <string name="talent_type_perception">Perception</string>
    <string name="talent_type_illusion">Illusion</string>
    <string name="talent_type_provoke">Provoke</string>
    <string name="talent_type_thievery">Thievery</string>
    <string name="talent_type_stealth">Stealth</string>
    <string name="talent_type_territory">Territory</string>
    <string name="talent_type_intellect">Intellect</string>
    <string name="talent_type_strength">Strength</string>

    <!-- Empty State -->
    <string name="empty_state_list_title" />
    <string name="empty_state_list_message">No entries available …\n try to synchronise manually or start adding entries on your own!</string>
    <string name="empty_state_list_reset_button">Start synchronize</string>

    <string name="empty_state_filtered_list_title">Oops!</string>
    <string name="empty_state_filtered_list_message">Your filters %s did not match any entries.</string>
    <string name="empty_state_filtered_list_reset_button">Reset filter</string>

    <!-- -->
    <string name="property_name">Name</string>
    <string name="talent_rang_requirement">Rank requirement</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_description">Enter description</string>

    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome to"</string>
    <string name="character_name">Name</string>
    <string name="attribute">Attribute</string>

    <string name="save_completed">Save completed!</string>
    <string name="save_failed">Save failed!</string>
    <string name="select_type">Select type</string>
    <string name="cost">Cost</string>
    <string name="weight">Weight</string>
    <string name="enter_cost">Enter cost</string>
    <string name="requirement_title">Requirement</string>
    <string name="range">Range</string>
    <string name="select_requirement">Select rang requirement</string>
    <string name="duration_title">Duration</string>
    <string name="shape_title">Shaping</string>
    <string name="enter_duration">Enter duration</string>
    <string name="enter_shape">Enter shaping</string>
    <string name="features_title">Features</string>
    <string name="menu_logout">Logout</string>
    <string name="movement_title">Movement</string>
    <string name="charisma_title">Charisma</string>
    <string name="parry_title">Parade</string>
    <string name="robustness">robustness</string>
    <string name="attribute_agility_title">Agility</string>
    <string name="attribute_constitution_title">Constitution</string>
    <string name="attribute_strength_title">Strength</string>
    <string name="attribute_intellect_title">Intellect</string>
    <string name="attribute_willpower_title">Willpower</string>
    <string name="text_recognition_selection_to_property">Set as property</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <string name="ocr_add_property_dialog_title">Which property is the selected text?</string>
    <string name="ocr_add_property_dialog_add_button">Add</string>
    <string name="content_description_add_role">Create a new role</string>
    <string name="content_description_add_feature">Add a feature</string>
    <string name="content_description_show_details_of">Show details of %s</string>
    <string name="button_next">Next</string>
    <string name="button_finish">Finish</string>
    <string name="button_previous">Previous</string>
    <string name="button_skip_content_description">Skip on boarding guide</string>

    <string name="onboarding_collection_title">Collection</string>
    <string name="onboarding_collection_description">You can browse through all the necessary content for your pen and paper adventure.</string>
    <string name="onboarding_roles_title">Different roles</string>
    <string name="onboarding_roles_description">As a reader, you can only browse through the content. You need the admin role to edit it. Ask your administrator if you would like to receive the role.</string>
    <string name="onboarding_ocr_title">Scan your books\n(Admin Feature)</string>
    <string name="onboarding_ocr_description">Entering all content can be very time-consuming. To relieve you of the work, you can photograph the pages and mark the required text passages.</string>
    <string name="onboarding_stories_coming_soon_title">Manage your story and sessions\n(coming soon)</string>
    <string name="onboarding_stories_coming_soon_description">In the future you can also maintain your stories via the app.</string>

    <string name="character_details_talent_header">Talents (%d)</string>
    <string name="character_details_handicap_header">Handicaps (%d)</string>
    <string name="character_details_forces_header">Forces (%d)</string>
    <string name="character_details_equipment_header">Equipments (%d)</string>
</resources>