<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:title="@string/menu_collection" >

        <menu>
            <item
                android:id="@+id/nav_worlds"
                android:icon="@drawable/ic_menu_worlds"
                android:title="@string/menu_worlds" />
            <item
                android:id="@+id/nav_characters"
                android:icon="@drawable/ic_menu_characters"
                android:title="@string/menu_characters" />
            <item
                android:id="@+id/nav_talents"
                android:icon="@drawable/ic_thumb_up"
                android:title="@string/menu_talents" />
            <item
                android:id="@+id/nav_handicaps"
                android:icon="@drawable/ic_thumb_down"
                android:title="@string/menu_handicaps" />
            <item
                android:id="@+id/nav_abilities"
                android:icon="@drawable/ic_menu_abilities"
                android:title="@string/menu_abilities" />
            <item
                android:id="@+id/nav_forces"
                android:icon="@drawable/ic_local_library"
                android:title="@string/menu_forces" />
            <item
                android:id="@+id/nav_equipments"
                android:icon="@drawable/ic_security"
                android:title="@string/menu_equipments" />
            <item
                android:id="@+id/nav_races"
                android:icon="@drawable/ic_menu_races"
                android:title="@string/menu_races" />
        </menu>
    </item>

    <item android:title="@string/menu_content">
        <menu>
            <item
                android:id="@+id/nav_stories"
                android:icon="@drawable/ic_library_books"
                android:title="@string/menu_stories" />
            <item
                android:id="@+id/nav_sessions"
                android:icon="@drawable/ic_menu_sessions"
                android:title="@string/menu_sessions" />
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_admin_panel"
            android:icon="@drawable/ic_menu_admin_panel_settings"
            android:title="@string/menu_admin_panel" />
    </group>

</menu>