<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search"
        android:title="Search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/app_bar_sort_list"
        android:icon="@drawable/ic_sort"
        android:title="Sort">

        <menu>
            <item
                android:id="@+id/app_bar_sort_name"
                android:title="@string/character_name" />
            <item
                android:id="@+id/app_bar_sort_race"
                android:title="@string/character_race" />
            <item
                android:id="@+id/app_bar_sort_type"
                android:title="@string/character_type" />
            <item
                android:id="@+id/app_bar_sort_world"
                android:title="@string/character_world" />
        </menu>
    </item>
    <item
        android:id="@+id/app_bar_filter_list"
        android:icon="@drawable/ic_filter_list"
        android:title="Filter" />
</menu>