<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_worlds">

    <fragment
        android:id="@+id/nav_worlds"
        android:name="com.cabbagebeyond.ui.collection.worlds.WorldsFragment"
        android:label="@string/menu_worlds"
        tools:layout="@layout/fragment_worlds_list">
        <action
            android:id="@+id/action_home_to_world_details"
            app:destination="@id/worldDetailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_characters"
        android:name="com.cabbagebeyond.ui.collection.characters.CharacterListFragment"
        android:label="@string/menu_characters"
        tools:layout="@layout/fragment_character_list">
        <action
            android:id="@+id/action_characters_list_to_details"
            app:destination="@id/characterDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/worldDetailsFragment"
        android:name="com.cabbagebeyond.ui.collection.worlds.details.WorldDetailsFragment">
        <argument
            android:name="world"
            app:argType="com.cabbagebeyond.model.World" />
    </fragment>
    <fragment
        android:id="@+id/nav_admin_panel"
        android:name="com.cabbagebeyond.ui.admin.AdminPanelFragment"
        android:label="fragment_admin_panel"
        tools:layout="@layout/fragment_admin_panel" />
    <fragment
        android:id="@+id/nav_account"
        android:name="com.cabbagebeyond.ui.account.AccountFragment"
        android:label="fragment_account" >
        <action
            android:id="@+id/action_account_to_character_details"
            app:destination="@id/characterDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/characterDetailsFragment"
        android:name="com.cabbagebeyond.ui.collection.characters.details.CharacterDetailsFragment"
        android:label="CharacterDetailsFragment" >
        <argument
            android:name="character"
            app:argType="com.cabbagebeyond.model.Character" />
    </fragment>
    <fragment
        android:id="@+id/nav_abilities"
        android:name="com.cabbagebeyond.ui.collection.abilities.AbilitiesListFragment"
        android:label="@string/menu_abilities"
        tools:layout="@layout/fragment_abilities_list" />
    <fragment
        android:id="@+id/nav_talents"
        android:name="com.cabbagebeyond.ui.collection.talents.TalentsListFragment"
        android:label="@string/menu_talents"
        tools:layout="@layout/fragment_talents_list" />
    <fragment
        android:id="@+id/nav_handicaps"
        android:name="com.cabbagebeyond.ui.collection.handicaps.HandicapsFragment"
        android:label="@string/menu_handicaps"
        tools:layout="@layout/fragment_handicaps_list" />
    <fragment
        android:id="@+id/nav_forces"
        android:name="com.cabbagebeyond.ui.collection.forces.ForcesFragment"
        android:label="@string/menu_forces"
        tools:layout="@layout/fragment_forces_list" />
</navigation>