<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="character"
            type="com.cabbagebeyond.model.Character" />

        <variable
            name="clickListener"
            type="com.cabbagebeyond.ui.collection.characters.CharacterClickListener" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/default_margin" >

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@{character.name}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="?attr/textAppearanceListItem"
        tools:text="Thunder Beast" />

    <TextView
        android:id="@+id/race_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/character_race"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintEnd_toStartOf="@+id/type_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/race_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Monster"
        android:text=""
        app:layout_constraintEnd_toEndOf="@id/race_title"
        app:layout_constraintStart_toStartOf="@id/race_title"
        app:layout_constraintTop_toBottomOf="@id/race_title" />

    <TextView
        android:id="@+id/type_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:text="@string/character_type"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintEnd_toStartOf="@+id/world_title"
        app:layout_constraintStart_toEndOf="@id/race_title"
        app:layout_constraintTop_toTopOf="@+id/race_title" />

    <TextView
        android:id="@+id/type_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Monster"
        android:text="@{character.type}"
        app:layout_constraintEnd_toEndOf="@id/type_title"
        app:layout_constraintStart_toStartOf="@id/type_title"
        app:layout_constraintTop_toBottomOf="@id/type_title" />

    <TextView
        android:id="@+id/world_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/character_world"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/type_title"
        app:layout_constraintTop_toTopOf="@+id/type_title" />

    <TextView
        android:id="@+id/world_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="World"
        android:text="@{character.world}"
        app:layout_constraintEnd_toEndOf="@id/world_title"
        app:layout_constraintStart_toStartOf="@id/world_title"
        app:layout_constraintTop_toBottomOf="@id/world_title" />

    <TextView
        android:id="@+id/description_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/character_description"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/race_value" />

    <TextView
        android:id="@+id/description_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:text="@{character.description}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_title"
        tools:text="A monster …" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>